Projet/Kubernetes/ingress-nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: taleb
spec:
  ingressClassName: nginx
  rules:
    - host: calculatrice-taleb.polytech-dijon.kiowy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-api
                port:
                  number: 5000
